# PautoGenerator-Test

./: README.md
PautoGenerator-Test/: BPMlistGenerate.txt  CMakeLists.txt  beats.txt  help.txt  noteGenerate.txt  template.txt  依赖库的解决(必看).txt
PautoGenerator-Test/src/: AudioProcessor.cpp  AudioProcessor.h  Generator.cpp  Generator.h  main.cpp
